Fix Echo support
Echo's ApiEchoNotifications hasn't had a getNotifications() method since d3d99772b92fc7c431d93ce75f54c574a1b64a94 (31 July 2014).

Also took the time to clean up escaping in the NotificationsMenu template as well as general Echo CSS.
Ideally Echo CSS would be loaded only when Echo is available, but it's pretty much a "default" extension these days so the perf hit isn't probably going to be too big.

--- a/resources/tempo.css
+++ b/resources/tempo.css
@@ -744,3 +744,22 @@ td.mw-label {
 	margin-left: 2px;
 	bottom: 5px;
 }
+
+/* Float the "X" (dismiss) link properly */
+.mw-echo-markAsReadButton {
+	float: right;
+}
+
+/* ...and ditto for the notification event icon as well */
+.mw-echo-icon {
+	float: left;
+	/* Give it a bit of padding, too! */
+	padding: 2px;
+	/* Apparently some of SocialProfile's icons (at least?) can appear M A S S I V E w/o this rule... */
+	max-width: 35px;
+}
+
+/* Make the msg shown to anons a bit less cramped, if you will */
+#top > #topnav > .userlinks-wrapper > #userlinks > ul > li > ul.anonymous-user {
+	padding-left: 10px;
+}
